--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'English essays'
 - !lcc 'PR'
 - !lcsh 'Short stories, English'
+- GITenberg
 title: The Works of Charles Lamb in Four Volumes, Volume 4
 url: http://www.gutenberg.org/ebooks/14129
